--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-4 text-center">Участники маркета</h1>
+        <hr class="my-4">
         <div class="row">
           <div class="col-11 col-lg-5 offset-1">
             <div class="card w-100 mx-auto">
@@ -121,7 +122,7 @@
               </div>
             </div>
           </div>
-          <div class="col-11 col-lg-5 offset-1">
+          <div class="col-11 col-lg-5">
             <div class="card w-100 mx-auto">
               <img class="card-img-top" src="img/ub_back.jpg" alt="Card image cap">
               <div class="card-body text-center">
@@ -135,6 +136,9 @@
         </div>
       </div>
     </div>
+        <h1 class="display-4 text-center">Место: где-то в Москве</h1>
+        <hr class="my-4">
+
   </div>
 
   </div>
@@ -148,6 +152,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script src="js/parallax.min.js"></script>
+  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad4b730c51b2ac94f6486c9324be3b9da29167b961c3fb23b8b8c1f1daecc02d2&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 </body>
 
 </html>
