--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="main_wrapper">
     <div class="parallax-window" data-parallax="scroll" data-image-src="./img/ub_back.jpg">
       <div class="header">
         <div class="sub title">13 АВГУСТА, 13:00 - 20:00</div>
@@ -26,8 +26,7 @@
     <div class="container">
       <div class="jumbotron whiteback">
         <p class="lead">
-          Urban Botanika — растительный маркет, организованный мастерской экспериментального фитодизайна Penny Royal совместно с 
-          Obsidian.
+          Urban Botanika — растительный маркет, организованный мастерской экспериментального фитодизайна Penny Royal совместно с Obsidian.
         </p>
         <hr class="my-4">
         <p>На маркете будут представлены самые креативные и удобные решения для интерьерного фитодизайна: бетонные кашпо, кокедамы,
@@ -79,7 +78,7 @@
           <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button>
         </p>
 
-        <h1 class="display-1 text-center">Как прошёл предыдущий маркет</h1>
+        <h1 class="display-4 text-center my-5">Как прошёл предыдущий маркет</h1>
         <div id="carouselControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -127,8 +126,9 @@
               <img class="card-img-top" src="img/ub_back.jpg" alt="Card image cap">
               <div class="card-body text-center">
                 <h5 class="card-title text-center">Obsidian</h5>
-                <p class="card-text">Мастерская, где создаются украшения из стекла и натурального гербария, классические витражи с росписью, витражи «Тиффани»,
-                «Фьюзинг», а также декор для интерера: стеклянные ловцы солнца, мозаичные панно, вазы, флорариумы, декоративные лампы.</p>
+                <p class="card-text">Мастерская, где создаются украшения из стекла и натурального гербария, классические витражи с росписью, витражи
+                  «Тиффани», «Фьюзинг», а также декор для интерера: стеклянные ловцы солнца, мозаичные панно, вазы, флорариумы,
+                  декоративные лампы.</p>
                 <a href="#" class="btn btn-outline-dark">lmbd.ru/obsidian/</a>
               </div>
             </div>
@@ -136,12 +136,15 @@
         </div>
       </div>
     </div>
-        <h1 class="display-4 text-center">Место: где-то в Москве</h1>
-        <hr class="my-4">
+    <h1 class="display-4 text-center">Место: где-то в Москве</h1>
+    <hr class="my-4">
+    <div class="container map">
+      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad4b730c51b2ac94f6486c9324be3b9da29167b961c3fb23b8b8c1f1daecc02d2&amp;source=constructor"
+        width="100%" height="400px" frameborder="0"></iframe>
+    </div>
 
   </div>
 
-  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -152,7 +155,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
   <script src="js/parallax.min.js"></script>
-  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad4b730c51b2ac94f6486c9324be3b9da29167b961c3fb23b8b8c1f1daecc02d2&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 </body>
 
 </html>
