--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1 class="display-4 text-center">Участники маркета</h1>
         <hr class="my-4">
         <div class="row">
-          <div class="col-11 col-lg-5 offset-1">
+          <div class="col-12 col-lg-5 offset-lg-1">
             <div class="card w-100 mx-auto">
               <img class="card-img-top" src="img/ub_back.jpg" alt="Card image cap">
               <div class="card-body text-center">
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <div class="col-11 col-lg-5">
+          <div class="col-12 col-lg-5">
             <div class="card w-100 mx-auto">
               <img class="card-img-top" src="img/ub_back.jpg" alt="Card image cap">
               <div class="card-body text-center">
