--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <div id="carouselControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/01.jpg" alt="First slide">
+              <img class="d-block h-100 mx-auto" src="img/01.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/02.jpg" alt="Second slide">
+              <img class="d-block h-100 mx-auto" src="img/02.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/03.jpg" alt="Third slide">
+              <img class="d-block h-100 mx-auto" src="img/03.jpg" alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
