--- a/index.html
+++ b/index.html
@@ -90,6 +90,102 @@
             <div class="carousel-item">
               <img class="d-block h-100 mx-auto" src="img/03.jpg" alt="Third slide">
             </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/05.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/06.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/07.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/08.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/10.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/11.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/12.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/13.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/14.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/15.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/16.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/17.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/18.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/19.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/21.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/22.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/23.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/24.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/25.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/26.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/27.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/28.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/29.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/30.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/31.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/32.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/33.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/34.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/35.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/36.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/37.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block h-100 mx-auto" src="img/41.jpg" alt="Third slide">
+            </div>
           </div>
           <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
