--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
         <div class="row">
           <div class="col-12 col-lg-5 offset-lg-1">
             <div class="card w-100 mx-auto">
-              <img class="card-img-top" src="img/ub_back.jpg" alt="Card image cap">
+              <div class="square" style="background-image:url('./img/pr.jpg')"></div>
+
               <div class="card-body text-center">
                 <h5 class="card-title text-center">Penny Royal</h5>
                 <p class="card-text">Мастерская экспериментального фитодизайна в духе минимализма. В Penny Royal мы объединяем живые растения
@@ -219,7 +220,7 @@
           </div>
           <div class="col-12 col-lg-5">
             <div class="card w-100 mx-auto">
-              <img class="card-img-top" src="img/ub_back.jpg" alt="Card image cap">
+              <div class="square" style="background-image:url('./img/obsidian.jpg')"></div>
               <div class="card-body text-center">
                 <h5 class="card-title text-center">Obsidian</h5>
                 <p class="card-text">Мастерская, где создаются украшения из стекла и натурального гербария, классические витражи с росписью, витражи
