--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
   <div class="main_wrapper">
-    <div class="parallax-window" data-parallax="scroll" data-image-src="./img/ub_back.jpg">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="./img/header_background.png">
       <div class="header">
-        <div class="sub title">13 АВГУСТА, 13:00 - 20:00</div>
-        <div class="title">Маркет Urban Botanica</div>
-        <button type="button" class="btn btn-light mx-auto" style="display: block; width: 200px;">Посетить маркет</button>
+        <div class="sub title text-danger">13 АВГУСТА, 13:00 - 20:00</div>
+        <div class="title text-danger">Маркет Urban Botanica</div>
+        <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button>
       </div>
     </div>
     <div class="container">
