--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
   <div class="main_wrapper">
-    <div class="parallax-window" data-parallax="scroll" data-image-src="./img/header_background.png">
+    <div class="parallax-window" data-parallax="scroll" data-image-src="./img/main_background.png">
       <div class="header">
-        <div class="sub title text-danger">13 АВГУСТА, 13:00 - 20:00</div>
+        <div class="sub title text-danger">4-5 АВГУСТА, 13:00 - 20:00</div>
         <div class="title text-danger">Маркет Urban Botanica</div>
-        <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button>
+        <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
       </div>
     </div>
     <div class="container">
@@ -44,7 +44,7 @@
           свое первое растение или пополнить уже имеющуюся растительную коллекцию необычным объектом.
         </p>
         <p class="lead">
-          <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button>
+          <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
         </p>
       </div>
       <div class="jumbotron whiteback">
@@ -233,11 +233,11 @@
         </div>
       </div>
     </div>
-    <h1 class="display-4 text-center">Место: где-то в Москве</h1>
+    <h1 class="display-4 text-center">Место: <br>Волгоградский проспект, дом 32, корпус 5</h1>
     <hr class="my-4">
     <div class="container map">
-      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad4b730c51b2ac94f6486c9324be3b9da29167b961c3fb23b8b8c1f1daecc02d2&amp;source=constructor"
-        width="100%" height="400px" frameborder="0"></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9654b306424546eb7d3d05cb53cd88a679193d95c2f0d20e795fd4d4937ebcf4&amp;source=constructor"
+        width="100%" height="450" frameborder="0"></iframe>
     </div>
 
   </div>
