--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
 <body>
   <div class="main_wrapper">
-    <div class="parallax-window" data-parallax="scroll" data-image-src="./img/main_background.png">
+    <div class="parallax-window-old" data-parallax="scroll" data-image-src="./img/main_background.png">
       <div class="header">
-        <div class="sub title text-danger">4-5 АВГУСТА, 13:00 - 20:00</div>
+        <div class="sub title text-danger">4-5 АВГУСТА, 12:00 - 20:00</div>
         <div class="title text-danger">Маркет Urban Botanica</div>
         <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
       </div>
     </div>
+
     <div class="container">
       <div class="jumbotron whiteback">
         <p class="lead">
@@ -251,7 +252,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
-  <script src="js/parallax.min.js"></script>
+  <!-- <script src="js/parallax.min.js"></script> -->
 </body>
 
 </html>
