--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
   <div class="main_wrapper">
-    <div class="parallax-window-old" data-parallax="scroll" data-image-src="./img/main_background.png">
+    <!-- <div class="parallax-window" data-parallax="scroll" data-image-src="./img/main_background.png"> -->
+    <div class=>
       <div class="header">
         <div class="sub title text-danger">4-5 АВГУСТА, 12:00 - 20:00</div>
         <div class="title text-danger">Маркет Urban Botanica</div>
