--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </p>
       </div>
       <div class="jumbotron whiteback">
-        <h1 class="display-4 text-center">Программа маркета</h1>
+        <!-- <h1 class="display-4 text-center">Программа маркета</h1>
         <p class="lead text-center">13 августа, 13:00 - 20:00</p>
 
         <hr class="my-4">
@@ -74,10 +74,10 @@
             <p>Растительные темы, хитрости и секреты цветоводов, ответы на вопросы посетителей</p>
           </div>
         </div>
-        <hr class="my-4">
+        <hr class="my-4"> -->
 
         <p class="lead">
-          <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button>
+          <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
         </p>
 
         <h1 class="display-4 text-center my-5">Как прошёл предыдущий маркет</h1>
