--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="jumbotron whiteback">
         <p class="lead">
-          Urban Botanika — растительный маркет, организованный мастерской экспериментального фитодизайна Penny Royal совместно с Obsidian.
+          Urban Botanika — растительный маркет, организованный мастерской экспериментального фитодизайна Penny Royal совместно с мастерской Obsidian.
         </p>
         <hr class="my-4">
         <p>На маркете будут представлены самые креативные и удобные решения для интерьерного фитодизайна: бетонные кашпо, кокедамы,
