--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <div class="parallax-window" data-parallax="scroll" data-image-src="./img/main_background.png"> -->
     <div class=>
       <div class="header">
-        <div class="sub title text-danger">4-5 АВГУСТА, 12:00 - 20:00</div>
+        <div class="sub title text-danger">4 АВГУСТА, 12:00 - 20:00</div>
         <div class="title text-danger">Маркет Urban Botanica</div>
         <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
       </div>
@@ -204,7 +204,12 @@
     </div>
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-4 text-center">Участники маркета</h1>
+      <h1 class="display-4 text-center">Как пройти:</h1>
+      <h2 class="display-8 text-center">Москва, ул. Сретенка 26/1</h1>
+      <h2 class="display-8 text-center">вход со стороны Селивёрстова переулка</h1>
+      <h2 class="display-8 text-center">подъезд 1, код домофона 7к0019</h1>
+      <h2 class="display-8 text-center">2-ой этаж, чёрная дверь</h1>
+        <!-- <h1 class="display-4 text-center">Участники маркета</h1>
         <hr class="my-4">
         <div class="row">
           <div class="col-12 col-lg-5 offset-lg-1">
@@ -232,14 +237,16 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
-    <h1 class="display-4 text-center">Место: <br>Волгоградский проспект, дом 32, корпус 5</h1>
+    <h1 class="display-4 text-center">Место: <br>ул. Сретенка 26/1</h1>
     <hr class="my-4">
     <div class="container map">
-      <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9654b306424546eb7d3d05cb53cd88a679193d95c2f0d20e795fd4d4937ebcf4&amp;source=constructor"
-        width="100%" height="450" frameborder="0"></iframe>
+      <!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9654b306424546eb7d3d05cb53cd88a679193d95c2f0d20e795fd4d4937ebcf4&amp;source=constructor"
+        width="100%" height="450" frameborder="0"></iframe> -->
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9654b306424546eb7d3d05cb53cd88a679193d95c2f0d20e795fd4d4937ebcf4&amp;source=constructor"
+          width="100%" height="450" frameborder="0"></iframe>
     </div>
 
   </div>
