--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           Urban Botanika — растительный маркет, организованный мастерской экспериментального фитодизайна Penny Royal совместно с мастерской Obsidian.
         </p>
         <hr class="my-4">
-        <p>На маркете будут представлены самые креативные и удобные решения для интерьерного фитодизайна: бетонные кашпо, кокедамы,
+        <p>На маркете будут представлены самые креативные и удобные решения для интерьерного фитодизайна: кашпо, кокедамы,
           флорариумы, растительные гербарии в стекле и многое другое.</p>
         <p>
           Весь день мы будем общаться на растительные темы, у посетителей будет шанс получить ответы на все вопросы по выбору растений
