--- a/index.html
+++ b/index.html
@@ -1,266 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>dyegorov.github.io</title>
+	</head>
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-
-  <title>urbanbotanika</title>
-</head>
-
-<body>
-  <div class="main_wrapper">
-    <!-- <div class="parallax-window" data-parallax="scroll" data-image-src="./img/main_background.png"> -->
-    <div class=>
-      <div class="header">
-        <div class="sub title text-danger">4 АВГУСТА, 12:00 - 20:00</div>
-        <div class="title text-danger">Маркет Urban Botanica</div>
-        <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="jumbotron whiteback">
-        <p class="lead">
-          Urban Botanika — растительный маркет, организованный мастерской экспериментального фитодизайна Penny Royal совместно с мастерской Obsidian.
-        </p>
-        <hr class="my-4">
-        <p>На маркете будут представлены самые креативные и удобные решения для интерьерного фитодизайна: кашпо, кокедамы,
-          флорариумы, растительные гербарии в стекле и многое другое.</p>
-        <p>
-          Весь день мы будем общаться на растительные темы, у посетителей будет шанс получить ответы на все вопросы по выбору растений
-          для городской квартиры и уходу за ними в течение года.
-        </p>
-        <p>
-          Если Вы с растениями любите друг друга давно и взаимно, или наоборот, Вы только планируете завести своих первых зеленых друзей,
-          приходите — это будет увлекательно и весело!
-        </p>
-        <p>
-          Когда лучше всего заводить в доме цветы? Конечно же, летом! Приходите к нам, чтобы приятно провести выходной, приобрести
-          свое первое растение или пополнить уже имеющуюся растительную коллекцию необычным объектом.
-        </p>
-        <p class="lead">
-          <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
-        </p>
-      </div>
-      <div class="jumbotron whiteback">
-        <!-- <h1 class="display-4 text-center">Программа маркета</h1>
-        <p class="lead text-center">13 августа, 13:00 - 20:00</p>
-
-        <hr class="my-4">
-        <div class="row">
-          <div class="col-3">
-            <h3>14:00 - 15:00</h3>
-          </div>
-          <div class="col-9">
-            <h2>Первый блок мини-лекций участников маркета</h2>
-            <p>Растительные темы, хитрости и секреты цветоводов, ответы на вопросы посетителей</p>
-          </div>
-        </div>
-
-        <hr class="my-4">
-        <div class="row">
-          <div class="col-3">
-            <h3>16:00 - 17:00</h3>
-          </div>
-          <div class="col-9">
-            <h2>Второй блок мини-лекций участников маркета</h2>
-            <p>Растительные темы, хитрости и секреты цветоводов, ответы на вопросы посетителей</p>
-          </div>
-        </div>
-        <hr class="my-4"> -->
-
-        <p class="lead">
-          <!-- <button type="button" class="btn btn-outline-dark mx-auto" style="display: block; width: 200px;">Посетить маркет</button> -->
-        </p>
-
-        <h1 class="display-4 text-center my-5">Как прошёл предыдущий маркет</h1>
-        <div id="carouselControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block h-100 mx-auto" src="img/01.jpg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/02.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/03.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/05.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/06.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/07.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/08.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/10.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/11.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/12.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/13.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/14.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/15.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/16.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/17.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/18.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/19.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/21.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/22.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/23.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/24.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/25.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/26.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/27.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/28.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/29.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/30.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/31.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/32.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/33.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/34.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/35.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/36.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/37.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block h-100 mx-auto" src="img/41.jpg" alt="Third slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
-
-      </div>
-    </div>
-    <div class="jumbotron">
-      <div class="container">
-      <h1 class="display-4 text-center">Как пройти:</h1>
-      <h2 class="display-8 text-center">Москва, ул. Сретенка 26/1</h1>
-      <h2 class="display-8 text-center">вход со стороны Селивёрстова переулка</h1>
-      <h2 class="display-8 text-center">подъезд 1, код домофона 7к0019</h1>
-      <h2 class="display-8 text-center">2-ой этаж, чёрная дверь</h1>
-        <!-- <h1 class="display-4 text-center">Участники маркета</h1>
-        <hr class="my-4">
-        <div class="row">
-          <div class="col-12 col-lg-5 offset-lg-1">
-            <div class="card w-100 mx-auto">
-              <div class="square" style="background-image:url('./img/pr.jpg')"></div>
-
-              <div class="card-body text-center">
-                <h5 class="card-title text-center">Penny Royal</h5>
-                <p class="card-text">Мастерская экспериментального фитодизайна в духе минимализма. В Penny Royal мы объединяем живые растения
-                  с приемами традиционного ручного ремесла для создания небанальных флористических композиций и оригинальных
-                  растительных объектов для дома.</p>
-                <a href="#" class="btn btn-outline-dark">pennyroyal.ru</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-lg-5">
-            <div class="card w-100 mx-auto">
-              <div class="square" style="background-image:url('./img/obsidian.jpg')"></div>
-              <div class="card-body text-center">
-                <h5 class="card-title text-center">Obsidian</h5>
-                <p class="card-text">Мастерская, где создаются украшения из стекла и натурального гербария, классические витражи с росписью, витражи
-                  «Тиффани», «Фьюзинг», а также декор для интерера: стеклянные ловцы солнца, мозаичные панно, вазы, флорариумы,
-                  декоративные лампы.</p>
-                <a href="#" class="btn btn-outline-dark">lmbd.ru/obsidian/</a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
-    </div>
-    <h1 class="display-4 text-center">Место: <br>ул. Сретенка 26/1</h1>
-    <hr class="my-4">
-    <div class="container map">
-      <!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9654b306424546eb7d3d05cb53cd88a679193d95c2f0d20e795fd4d4937ebcf4&amp;source=constructor"
-        width="100%" height="450" frameborder="0"></iframe> -->
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9654b306424546eb7d3d05cb53cd88a679193d95c2f0d20e795fd4d4937ebcf4&amp;source=constructor"
-          width="100%" height="450" frameborder="0"></iframe>
-    </div>
-
-  </div>
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
-  <!-- <script src="js/parallax.min.js"></script> -->
-</body>
-
+	<body>
+		dyegorov.github.io
+	</body>
 </html>
