fix(virtual-museum)

--- a/virtual-museum/excursion-page.html
+++ b/virtual-museum/excursion-page.html
@@ -186,23 +186,16 @@
 					<p>
 						Эта история посвящена уникальным фактам, событиям и судьбам, которые
 						вершились в стенах Новодевичьего монастыря на протяжении многих
-						столетий. И начнём мы с далёкого прошлого.
-					</p>
-					<p>
+						столетий. И начнём мы с далёкого прошлого.<br /><br />
 						В 1524 году Великим Князем Московским – Василием III – был основан
-						Новодевичий монастырь.
-					</p>
-					<p>
-						Новым его назвали по отношению к более древним столичным обителям:
-						Алексеевскому (Зачатьевскому) монастырю и Кремлевскому
-						Вознесенскому, чью древнюю славу Новодевичий перенял, став новой
-						придворной обителью. Сюда XVI-XVII веках поступали представительницы
-						самой родовитой знати. Согласно патриаршей грамоте 1598 года полное
-						название обители звучало так:
-					</p>
-					<p>
-						Пречестная Великая обитель Пречистыя Богородицы Одигитрии Новый
-						Девичий монастырь.
+						Новодевичий монастырь. Новым его назвали по отношению к более
+						древним столичным обителям: Алексеевскому (Зачатьевскому) монастырю
+						и Кремлевскому Вознесенскому, чью древнюю славу Новодевичий перенял,
+						став новой придворной обителью.<br /><br />Сюда XVI-XVII веках
+						поступали представительницы самой родовитой знати.
+						<br /><br />Согласно патриаршей грамоте 1598 года полное название
+						обители звучало так: Пречестная Великая обитель Пречистыя Богородицы
+						Одигитрии Новый Девичий монастырь.
 					</p>
 				</div>
 				<div class="double__aside double__aside--map">
