--- a/virtual-museum/udmurtia.html
+++ b/virtual-museum/udmurtia.html
@@ -86,7 +86,7 @@
 					</div>
 					<div class="topslider__item">
 						<div class="topslider__content">
-							<div class="topslider__title">Третий Заголовок Слайдера</div>
+							<div class="topslider__title">Третий Заголовок</div>
 							<div class="topslider__text">
 								мультимедийные экскурсии с 3D-панорамами, фотографиями и видео
 								на вашем сайте
@@ -96,7 +96,7 @@
 					</div>
 					<div class="topslider__item">
 						<div class="topslider__content">
-							<div class="topslider__title">Виртуальный музей заголовок</div>
+							<div class="topslider__title">Виртуальный заголовок</div>
 							<div class="topslider__text">
 								мультимедийные экскурсии второстепенный текст фотографиями и
 								видео экскурсии
